--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     ],
     "require": {
 	"php":                      ">=5.3.2",
-	"symfony/framework-bundle": ">=2.0.14,<2.3-dev"
+	"symfony/framework-bundle": ">=2.0.14,<2.3-dev",
+	"symfony/security": ">=2.0.14,<2.3-dev"
     },
     "autoload": {
 	"psr-0": {
