--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "gerardtoko/blacklist-bundle",
     "type": "symfony-bundle",
-    "description": "Symfony bundle for the Black list IP in your application",
+    "description": "Symfony 2 bundle for the Black list IP in your application",
     "keywords": ["blacklist", "symfony","bundle"],
     "homepage": "https://github.com/gerardtoko/GTBlackListBundle",
     "license": "MIT",
